--- a/.env
+++ b/.env
@@ -18,3 +18,10 @@
 APP_ENV=dev
 APP_SECRET=dd2b98bec32ffa3ce0040e7f9338312a
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+DATABASE_URL="mysql://root:@127.0.0.1:3306/todoandco?serverVersion=5.7&charset=utf8mb4"
+###< doctrine/doctrine-bundle ###
