Feat(implementation): Ajout du process des tasks

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+      "ext-http": "*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.43"
