--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ todoandco/.idea/*
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> friends-of-behat/symfony-extension ###
+/behat.yml
+###< friends-of-behat/symfony-extension ###
