--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,12 +17,13 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            form_login:
-                # "app_login" is the name of the route created previously
-                login_path: app_login
-                check_path: app_login
+#            form_login:
+#                # "app_login" is the name of the route created previously
+#                login_path: app_login
+#                check_path: app_login
             logout:
                 path: app_logout
+            custom_authenticator: App\Security\AppAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
