TAC - Readme + delete customer role in forms

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
+        "symfony/validator": "5.4.*",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
